// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classes/Link should create a link with a parent 1`] = `
Link {
  "error": undefined,
  "hash": "",
  "href": "https://example.com/en",
  "isChecked": false,
  "isCrawled": false,
  "isDocument": undefined,
  "normalizedHref": "https://example.com/en",
  "origin": "https://example.com",
  "parents": Map {
    "https://example.com/" => Link {
      "error": undefined,
      "hash": "",
      "href": "https://example.com/",
      "isChecked": false,
      "isCrawled": false,
      "isDocument": undefined,
      "normalizedHref": "https://example.com/",
      "origin": "https://example.com",
      "parents": Map {},
      "pathname": "/",
      "protocol": "https:",
      "search": "",
      "type": 1,
      "uptimeReport": null,
    },
  },
  "pathname": "/en",
  "protocol": "https:",
  "search": "",
  "type": 1,
  "uptimeReport": null,
}
`;

exports[`classes/Link should create a root link 1`] = `
Link {
  "error": undefined,
  "hash": "",
  "href": "https://example.com/",
  "isChecked": false,
  "isCrawled": false,
  "isDocument": undefined,
  "normalizedHref": "https://example.com/",
  "origin": "https://example.com",
  "parents": Map {},
  "pathname": "/",
  "protocol": "https:",
  "search": "",
  "type": 1,
  "uptimeReport": null,
}
`;

exports[`classes/Link should handle a huge file 1`] = `
Link {
  "error": undefined,
  "hash": "",
  "href": "https://speed.hetzner.de/1GB.bin",
  "isChecked": false,
  "isCrawled": false,
  "isDocument": undefined,
  "normalizedHref": "https://speed.hetzner.de/1GB.bin",
  "origin": "https://speed.hetzner.de",
  "parents": Map {},
  "pathname": "/1GB.bin",
  "protocol": "https:",
  "search": "",
  "type": 1,
  "uptimeReport": null,
}
`;
